; ModuleID = '/home/carl/AnghaBench/libgit2/tests/repo/extr_init.c_test_repo_init__at_filesystem_root.c'
source_filename = "/home/carl/AnghaBench/libgit2/tests/repo/extr_init.c_test_repo_init__at_filesystem_root.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_6__ = type { i32 }

@GIT_BUF_INIT = common dso_local global %struct.TYPE_6__ zeroinitializer, align 4
@.str = private unnamed_addr constant [30 x i8] c"GITTEST_INVASIVE_FS_STRUCTURE\00", align 1
@.str.1 = private unnamed_addr constant [17 x i8] c"libgit2_test_dir\00", align 1
@GIT_RMDIR_REMOVE_FILES = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @test_repo_init__at_filesystem_root() #0 {
  %1 = alloca i32*, align 8
  %2 = alloca i8*, align 8
  %3 = alloca %struct.TYPE_6__, align 4
  %4 = alloca i32, align 4
  %5 = call i8* (...) @clar_sandbox_path()
  store i8* %5, i8** %2, align 8
  %6 = bitcast %struct.TYPE_6__* %3 to i8*
  call void @llvm.memcpy.p0i8.p0i8.i64(i8* align 4 %6, i8* align 4 bitcast (%struct.TYPE_6__* @GIT_BUF_INIT to i8*), i64 4, i1 false)
  %7 = call i32 @cl_is_env_set(i8* getelementptr inbounds ([30 x i8], [30 x i8]* @.str, i64 0, i64 0))
  %8 = icmp ne i32 %7, 0
  br i1 %8, label %11, label %9

9:                                                ; preds = %0
  %10 = call i32 (...) @cl_skip()
  br label %11

11:                                               ; preds = %9, %0
  %12 = load i8*, i8** %2, align 8
  %13 = call i32 @git_path_root(i8* %12)
  store i32 %13, i32* %4, align 4
  %14 = load i32, i32* %4, align 4
  %15 = icmp sge i32 %14, 0
  %16 = zext i1 %15 to i32
  %17 = call i32 @cl_assert(i32 %16)
  %18 = load i8*, i8** %2, align 8
  %19 = load i32, i32* %4, align 4
  %20 = add nsw i32 %19, 1
  %21 = call i32 @git_buf_put(%struct.TYPE_6__* %3, i8* %18, i32 %20)
  %22 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %3, i32 0, i32 0
  %23 = load i32, i32* %22, align 4
  %24 = call i32 @git_buf_joinpath(%struct.TYPE_6__* %3, i32 %23, i8* getelementptr inbounds ([17 x i8], [17 x i8]* @.str.1, i64 0, i64 0))
  %25 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %3, i32 0, i32 0
  %26 = load i32, i32* %25, align 4
  %27 = call i32 @git_path_exists(i32 %26)
  %28 = icmp ne i32 %27, 0
  %29 = xor i1 %28, true
  %30 = zext i1 %29 to i32
  %31 = call i32 @cl_assert(i32 %30)
  %32 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %3, i32 0, i32 0
  %33 = load i32, i32* %32, align 4
  %34 = call i32 @git_repository_init(i32** %1, i32 %33, i32 0)
  %35 = call i32 @cl_git_pass(i32 %34)
  %36 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %3, i32 0, i32 0
  %37 = load i32, i32* %36, align 4
  %38 = call i32 @git_path_isdir(i32 %37)
  %39 = call i32 @cl_assert(i32 %38)
  %40 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %3, i32 0, i32 0
  %41 = load i32, i32* %40, align 4
  %42 = load i32, i32* @GIT_RMDIR_REMOVE_FILES, align 4
  %43 = call i32 @git_futils_rmdir_r(i32 %41, i32* null, i32 %42)
  %44 = call i32 @cl_git_pass(i32 %43)
  %45 = call i32 @git_buf_dispose(%struct.TYPE_6__* %3)
  %46 = load i32*, i32** %1, align 8
  %47 = call i32 @git_repository_free(i32* %46)
  ret void
}

declare dso_local i8* @clar_sandbox_path(...) #1

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memcpy.p0i8.p0i8.i64(i8* noalias nocapture writeonly, i8* noalias nocapture readonly, i64, i1 immarg) #2

declare dso_local i32 @cl_is_env_set(i8*) #1

declare dso_local i32 @cl_skip(...) #1

declare dso_local i32 @git_path_root(i8*) #1

declare dso_local i32 @cl_assert(i32) #1

declare dso_local i32 @git_buf_put(%struct.TYPE_6__*, i8*, i32) #1

declare dso_local i32 @git_buf_joinpath(%struct.TYPE_6__*, i32, i8*) #1

declare dso_local i32 @git_path_exists(i32) #1

declare dso_local i32 @cl_git_pass(i32) #1

declare dso_local i32 @git_repository_init(i32**, i32, i32) #1

declare dso_local i32 @git_path_isdir(i32) #1

declare dso_local i32 @git_futils_rmdir_r(i32, i32*, i32) #1

declare dso_local i32 @git_buf_dispose(%struct.TYPE_6__*) #1

declare dso_local i32 @git_repository_free(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
